style.css
.page {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

/* 
Blue section starts 
*/

.section--dark-blue {
  background-color: #1F2937;
}

.header {
  display: flex;
  width: 100vw;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 70px;
}

.header__logo {
  font-size: 24px;
  color: #F9FAF8;
}

.header__links {
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0;
  gap: 20px;
  flex-wrap: wrap;
  font-size: 18px;
  color: #E5E7EB;
}

.hero {
  display: flex;
  flex-wrap: wrap;
  padding: 20px 190px;
}

.hero__heading {
  font-size: 48px;
  font-weight: 800;
  color: #F9FAF8;
}

.hero__content {
  font-size: 18px;
  color: #E5E7EB;
}

.hero__button {
  background-color: #3882F6;
}

.hero__image {
  background-color: gray;
  color: white;
  width: 475px;
  display: flex;
  justify-content: center;
  align-items: center;
}

/* 
Blue section ends 
*/

.call2,
.footer {
  font-size: 18px;
  color: #E5E7EB;
}

button {
  border: none;
  border-radius: 6px;
  padding: 8px 30px;
  font-weight: bold;
  color: white;
  font-size: 20px;
}

.white {
  display: flex;
  flex-wrap: wrap;
  width: 100vw;
  padding-bottom: 100px;
}

.information-header {
  display: flex;
  width: 100vw;
  justify-content: center;
  font-size: 36px;
  font-weight: 800;
  margin: 50px;
  color: #1F2937;
}

.information {
  display: flex;
  width: 100vw;
  justify-content: center;
  gap: 40px;
}

.img-text {
  display: flex;
  flex-direction: column;
  width: 150px;
  gap: 8px;
}

.blank-box {
  border-style: solid;
  border-color: #3882F6;
  border-width: 4px;
  border-radius: 8%;
  height: 150px;
}

.gray {
  background-color: #E5E7Eb;
  display: flex;
  flex-direction: column;
  padding: 100px;
}

.quote {
  width: 70%;
  align-self: center;
  font-size: 36px;
  font-weight: lighter;
  font-style: italic;
}

.reference {
  align-self: flex-end;
  font-weight: bold;
  font-size: 20px;
  padding-right: 240px;
}

.bottom-white {
  padding: 80px 200px;
}

.call0 {
  display: flex;
  padding: 50px 50px;
  justify-content: space-around;
  border-radius: 10px;
}

.call1 {
  font-weight: bold;
  color: white;
  font-size: 22px;
}

#border {
  border: solid;
}

.dark-color {
  background-color: #1F2937;
}

.footer {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 35px;
}

